--- a/blog-detail-4.html
+++ b/blog-detail-4.html
@@ -648,8 +648,7 @@
             </p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1621605815971-fbc98d665033?q=80&w=1000&auto=format&fit=crop"
-            alt="Produk Styling Rambut" class="article-img-top">
+        <img src="img/artikel4.jpg" alt="Produk Styling Rambut" class="article-img-top">
         <p class="img-caption">Berbagai jenis produk styling untuk hasil yang berbeda.</p>
 
         <div class="toc-box">
@@ -684,8 +683,7 @@
             <blockquote>"Produk yang tepat adalah kunci styling yang tahan lama. Jangan asal pilih hanya karena wangi."
             </blockquote>
 
-            <img src="https://images.unsplash.com/photo-1593702295094-aea22597af65?q=80&w=1000&auto=format&fit=crop"
-                alt="Aplikasi Clay pada Rambut" class="article-img-bottom">
+            <img src="img/galeri6.jpg" alt="Aplikasi Clay pada Rambut" class="article-img-bottom">
             <p class="img-caption">Penggunaan Clay memberikan efek volume tanpa kilap.</p>
 
             <h2 id="section3">3. Clay: Matte Finish Terbaik</h2>
