--- a/blog-detail-5.html
+++ b/blog-detail-5.html
@@ -643,8 +643,7 @@
                 yang memaksimalkan fitur wajahmu.</p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1621605815971-fbc98d665033?q=80&w=1000&auto=format&fit=crop"
-            alt="Analisis Bentuk Wajah Pria" class="article-img-top">
+        <img src="img/artikel5.jpg" alt="Analisis Bentuk Wajah Pria" class="article-img-top">
         <p class="img-caption">Setiap bentuk wajah memiliki gaya rambut idealnya sendiri.</p>
 
         <div class="toc-box">
@@ -678,8 +677,7 @@
             <blockquote>"Potongan rambut adalah bingkai wajah. Bingkai yang tepat akan menonjolkan fitur terbaikmu."
             </blockquote>
 
-            <img src="https://images.unsplash.com/photo-1593702295094-aea22597af65?q=80&w=1000&auto=format&fit=crop"
-                alt="Contoh Potongan Wajah Kotak" class="article-img-bottom">
+            <img src="img/artikel4.jpg" alt="Contoh Potongan Wajah Kotak" class="article-img-bottom">
             <p class="img-caption">Wajah kotak cocok dengan potongan cepak atau crew cut.</p>
 
             <h2 id="face3">3. Wajah Kotak (Square Face)</h2>
