--- a/blog-detail-6.html
+++ b/blog-detail-6.html
@@ -645,8 +645,7 @@
                 mengatasinya secara alami maupun medis.</p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1599351431613-18ef1fdd27e1?q=80&w=1000&auto=format&fit=crop"
-            alt="Perawatan Kulit Kepala" class="article-img-top">
+        <img src="img/artikel6.jpg" alt="Perawatan Kulit Kepala" class="article-img-top">
         <p class="img-caption">Kulit kepala bersih adalah kunci rambut sehat.</p>
 
         <div class="toc-box">
