--- a/blog-detail-7.html
+++ b/blog-detail-7.html
@@ -639,8 +639,7 @@
                 hingga rumit untuk gaya maksimal.</p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1567894340315-735d7c361db0?q=80&w=1000&auto=format&fit=crop"
-            alt="Hair Tattoo Design" class="article-img-top">
+        <img src="img/galeri7.jpg" alt="Hair Tattoo Design" class="article-img-top">
         <p class="img-caption">Desain geometris simpel pada potongan buzz cut.</p>
 
         <div class="toc-box">
