--- a/blog-detail-8.html
+++ b/blog-detail-8.html
@@ -639,8 +639,7 @@
                 merawatnya agar tetap sehat.</p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1534353875273-b5887cc1abf5?q=80&w=1000&auto=format&fit=crop"
-            alt="Grey Hair" class="article-img-top">
+        <img src="img/galeri2.jpg" alt="Grey Hair" class="article-img-top">
         <p class="img-caption">Uban tidak lagi menjadi masalah, bahkan bisa menjadi gaya.</p>
 
         <div class="toc-box">
@@ -671,8 +670,7 @@
 
             <blockquote>"Uban adalah tanda kedewasaan, tapi kesehatan rambut tetap yang utama."</blockquote>
 
-            <img src="https://images.unsplash.com/photo-1622286342621-4bd786c2447c?q=80&w=2000&auto=format&fit=crop"
-                alt="Coloring di Barbershop" class="article-img-bottom">
+            <img src="img/galeri8.jpg" alt="Coloring di Barbershop" class="article-img-bottom">
             <p class="img-caption">Pewarnaan rambut (coloring) bisa menjadi solusi instan.</p>
 
             <h2 id="food">3. Makanan Pencegah Uban Dini</h2>
