--- a/blog-detail-9.html
+++ b/blog-detail-9.html
@@ -639,8 +639,7 @@
                 agar mereka tenang saat dicukur.</p>
         </div>
 
-        <img src="https://images.unsplash.com/photo-1519340241574-2291ec335c46?q=80&w=1000&auto=format&fit=crop"
-            alt="Kids Haircut" class="article-img-top">
+        <img src="img/artikel9.jpg" alt="Kids Haircut" class="article-img-top">
         <p class="img-caption">Suasana menyenangkan membuat anak lebih tenang saat potong rambut.</p>
 
         <div class="toc-box">
@@ -673,7 +672,7 @@
             <blockquote>"Pengalaman cukur pertama menentukan keberanian anak di kunjungan selanjutnya. Buatlah senyaman
                 mungkin."</blockquote>
 
-            <img src="img/galeri8.jpg" alt="Anak Potong Rambut" class="article-img-bottom">
+            <img src="img/galeri2.jpg" alt="Anak Potong Rambut" class="article-img-bottom">
             <p class="img-caption">Barber yang ramah anak sangat membantu proses pencukuran.</p>
 
             <h2 id="distraction">3. Gunakan Distraksi Efektif</h2>
