--- a/blog.html
+++ b/blog.html
@@ -674,85 +674,85 @@
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1593702295094-aea22597af65?q=80&w=1000&auto=format&fit=crop"
-                        alt="Pomade vs Wax" loading="lazy">
+                    <img src="img/artikel4.jpg" alt="Pomade vs Wax" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Produk • 15 Nov 2025</div>
                     <h3><a href="blog-detail-4.html">Pomade, Wax, atau Clay? Pilih yang Cocok untuk Rambutmu</a></h3>
                     <p>Bingung milih produk styling? Kenali perbedaan tekstur dan hasil akhirnya, apakah glossy atau
                         matte.</p>
-                    <a href="blog-detail-4.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-4.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1621605815971-fbc98d665033?q=80&w=1000&auto=format&fit=crop"
-                        alt="Potongan Sesuai Wajah" loading="lazy">
+                    <img src="img/artikel5.jpg" alt="Potongan Sesuai Wajah" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Tips • 2 Nov 2025</div>
                     <h3><a href="blog-detail-5.html">Panduan Memilih Potongan Rambut Sesuai Bentuk Wajah</a></h3>
                     <p>Wajah bulat, oval, atau kotak? Jangan salah pilih model. Temukan potongan yang memaksimalkan
                         fitur wajahmu.</p>
-                    <a href="blog-detail-5.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-5.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1599351431613-18ef1fdd27e1?q=80&w=1000&auto=format&fit=crop"
-                        alt="Mengatasi Ketombe" loading="lazy">
+                    <img src="img/artikel6.jpg" alt="Mengatasi Ketombe" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Kesehatan • 20 Okt 2025</div>
                     <h3><a href="blog-detail-6.html">Cara Ampuh Mengatasi Ketombe Membandel pada Pria</a></h3>
                     <p>Ketombe bikin gak pede dan gatal? Simak penyebab utamanya dan cara mengatasinya secara alami
                         maupun medis.</p>
-                    <a href="blog-detail-6.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-6.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1567894340315-735d7c361db0?q=80&w=1000&auto=format&fit=crop"
-                        alt="Hair Tattoo" loading="lazy">
+                    <img src="img/artikel7.jpg" alt="Hair Tattoo" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Tren • 5 Okt 2025</div>
                     <h3><a href="blog-detail-7.html">Tren Hair Tattoo: Seni Ukir Rambut yang Makin Diminati</a></h3>
                     <p>Tampil beda dengan desain hair tattoo yang artistik. Inspirasi motif simpel hingga rumit untuk
                         gaya maksimal.</p>
-                    <a href="blog-detail-7.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-7.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1534353875273-b5887cc1abf5?q=80&w=1000&auto=format&fit=crop"
-                        alt="Uban Muda" loading="lazy">
+                    <img src="img/galeri2.jpg" alt="Uban Muda" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Edukasi • 28 Sep 2025</div>
                     <h3><a href="blog-detail-8.html">Muncul Uban di Usia Muda? Ini Penyebab dan Solusinya</a></h3>
                     <p>Stres atau genetik? Cari tahu kenapa rambut memutih lebih cepat dan cara merawatnya agar tetap
                         sehat.</p>
-                    <a href="blog-detail-8.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-8.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-card">
                 <div class="blog-img">
-                    <img src="https://images.unsplash.com/photo-1519340241574-2291ec335c46?q=80&w=1000&auto=format&fit=crop"
-                        alt="Potong Rambut Anak" loading="lazy">
+                    <img src="img/artikel9.jpg" alt="Potong Rambut Anak" loading="lazy">
                 </div>
                 <div class="blog-content">
                     <div class="blog-meta">Kids • 12 Sep 2025</div>
                     <h3><a href="blog-detail-9.html">Tips Agar Anak Tidak Rewel Saat Potong Rambut</a></h3>
                     <p>Mengajak si kecil ke barbershop bisa jadi tantangan. Coba trik psikologis ini agar mereka tenang
                         saat dicukur.</p>
-                    <a href="blog-detail-9.html" class="read-more">Baca Selengkapnya <i class="fas fa-arrow-right"></i></a>
+                    <a href="blog-detail-9.html" class="read-more">Baca Selengkapnya <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
 
